[metadata]
name = cdwrx
summary = RxNorm service wrappers and utilities
description-file = README.md
author = Evan Phelps
author-email = evan.phelps@gmail.com
classifier = 
	Environment :: HSSC
	Intended Audience :: Health IT
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7

[files]
packages = cdwrx

[easy_install]

